tests/baselines/reference/moduleImport.errors.txt
==== tests/cases/compiler/moduleImport.ts (1 errors) ====
    module A.B.C {
    	import XYZ = X.Y.Z;
    	~~~~~~~~~~~~~~~~~~~
!!! error TS2305: Module 'X' has no exported member 'Y'.
    	export function ping(x: number) {
    		if (x>0) XYZ.pong (x-1);
    	}
    }
    
    module X {
    	import ABC = A.B.C;
    	export function pong(x: number) {
    		if (x > 0) ABC.ping(x-1);
    	}
    }